@@ -3,7 +3,12 @@ AUX disable-debootstrap-configure.ac.patch 873 RMD160 ba5566ebe8c86c4c87b88967dc
 DIST libguestfs-1.5.19-x86_64.tar.gz 45678068 RMD160 92a36e43765b83827f8ec94ebe5bf87716df0af5 SHA1 7d1701bc4e180e97d01c309d1779d1328ae7f77d SHA256 6b650a33c469902a7742ef2d60d1a6b6ea5d399917c301a03ba39c449ad661f3
 DIST libguestfs-1.5.21.tar.gz 4343061 RMD160 3cd976d17fa2341a04127169b7df5397e84e4d0c SHA1 02415d22a5c94f854efc2af5d1d8ae61bfa5b153 SHA256 1480fb9aea72912250f9e44e05cd4c5d9bf29472e4ae30b716babd6e405a432c
 DIST libguestfs-1.5.26.tar.gz 4354423 RMD160 a44ff096fd3b017485978c2354d688fcd6cee125 SHA1 0e1a26c2fb9a66334a5b7f5f9807f41d28e9f903 SHA256 9188bb0a0c7e43b6e3ba7269f8b94ca96a933458fd900e6738a88df98c61303a
+DIST libguestfs-1.6.0.tar.gz 4354552 RMD160 e6370eb51c5ec32e7a965a29e2591c9b63865029 SHA1 8538de6ba3a729712abbde19e8401de3a106ad9c SHA256 a2b5707b7347bd10a94b6a8fb22081531349c784eb1a3ffac4330d249d313641
+DIST libguestfs-1.7.0-x86_64.tar.gz 42608102 RMD160 9d4268e4e2bba5167d36938b4a41279b6cffd89f SHA1 79de4f2595e68a869af3528ac1a30d31b376d13b SHA256 c142afa5698299721b14ac07d1996eaee2fcb8797fa4dd298f5823ce2c40feb9
+DIST libguestfs-1.7.1.tar.gz 4357979 RMD160 ad785757eb4e31accb635bb103b70af46878c37c SHA1 24595c201e28c442c292f88d3aec306b22ca5c3b SHA256 35d3834c2bbbf93cce0c5e36607b87c01254bf58fac8efef3ea5f066e0b48e26
 EBUILD libguestfs-1.5.21.ebuild 2331 RMD160 aa6c6d612eb0bf75f8429f7edcd795f362188843 SHA1 87319cec248008e11be8d0c15627701b2b28fd13 SHA256 fae478e6e2edec8e9c1716781675c673f5142aa53c8bc34db6bd62aff7790308
 EBUILD libguestfs-1.5.26.ebuild 2331 RMD160 aa6c6d612eb0bf75f8429f7edcd795f362188843 SHA1 87319cec248008e11be8d0c15627701b2b28fd13 SHA256 fae478e6e2edec8e9c1716781675c673f5142aa53c8bc34db6bd62aff7790308
-MISC ChangeLog 1555 RMD160 dc3c8a7ef98fb0b6b8f8e74af00455727e27c413 SHA1 10934f90cbf4d7d237bc42ff2ee05b1a170417ab SHA256 2d502dd9cb0b914aa69096701116ff2e4601170b4627b7767e59cccb5901aab3
+EBUILD libguestfs-1.6.0.ebuild 2326 RMD160 0e53ff6d42b4869f05685c48074d3b9fd4a22e19 SHA1 d726e9dd4990ee0ec76bfd421085c161d8993f71 SHA256 98adf763fe6e8cd0fc341dc9410db391f0dbb87307d22930ba9ffd9b57eb821c
+EBUILD libguestfs-1.7.1.ebuild 2330 RMD160 731fff0552d9654331bc2245eeda26eff83c3e16 SHA1 cbeb2dfc59682d060df8270ef60a5ac52bda4ffa SHA256 80a2e4d9fe47bb0c080d19a5ff554a08b562f71aeac216cbfc29a5883e23e8ba
+MISC ChangeLog 1681 RMD160 d660e8b55b49b6e1a22f85a44683ce2e491bba6c SHA1 6ef4267fb75ab359bbc37980da6caa084a583224 SHA256 cadb5775d81ff2e1c0f89d5d5ae38196babf65b1fea6aab210a26260aa6661d2
 MISC metadata.xml 562 RMD160 236fe644daef419449d9f221c2cbff057f62ed9a SHA1 444306dfb074e27e8f5cac4fbb6ef0b3276ea8d4 SHA256 c7c27e8d190942aaaef515d322529b47a1b399782f1157177dca2340380c3630
