@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +libguestfs-1.6.0.ebuild, +libguestfs-1.7.1.ebuild:
+  add new version
+
   31 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +libguestfs-1.5.26.ebuild:
   bump
